# rogato

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  codecov.sh
.github/workflows/: ci.yml  release.yml
common/: Cargo.toml
common/src/: native_fn.rs  util.rs  val.rs
common/src/ast/: expression.rs  fn_call.rs  fn_def.rs  helpers.rs  identifier.rs  if_else.rs  lambda.rs  let_expression.rs  literal.rs  mod.rs  module_def.rs  pattern.rs  program.rs  query.rs  type_expression.rs  visitor.rs  walker.rs
common/src/val/: list.rs  map.rs  mod.rs  object.rs  queue.rs  set.rs  stack.rs  vector.rs
compiler/: Cargo.toml
compiler/src/: codegen.rs  compiler.rs  error.rs  lib.rs
compiler/src/ast/: expression.rs  fn_call.rs  fn_def.rs  if_else.rs  lambda.rs  let_expression.rs  literal.rs  mod.rs  module_def.rs  program.rs  query.rs  type_def.rs
compiler/src/tests/: compiler.rs  mod.rs
db/: Cargo.toml
db/src/db/: mod.rs  object.rs  object_storage.rs
examples/: basic_features.fmodl  basic_features.roga  basic_syntax.fmodl  basic_syntax.roga  data_import.roga  fib.roga  large_literals.roga  pattern_matching.roga  people_db.fmodl  people_db.roga  query.roga
interpreter/: Cargo.toml
interpreter/src/: environment.rs  eval_context.rs  lib.rs  module.rs  pattern.rs  pattern_matching.rs  query_planner.rs
interpreter/src/ast/: expression.rs  fn_call.rs  fn_def.rs  identifier.rs  if_else.rs  lambda.rs  let_expression.rs  literal.rs  mod.rs  module_def.rs  pattern.rs  program.rs  query.rs  type_expression.rs
interpreter/src/lib_std/: list.rs  map.rs  math.rs  mod.rs  set.rs  string.rs  symbol.rs
interpreter/src/tests/: fn_def.rs  interpreter.rs  mod.rs
interpreter/src/tests/lib_std/: list.rs  map.rs  math.rs  mod.rs  set.rs  string.rs
interpreter/src/tests/std_lib/: list.rs  mod.rs  string.rs
lib/: Std.roga
lib/Std/: List.roga  Map.roga  Result.roga
lib/std/: list.roga  map.roga  result.roga
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs
parser/src/tests/: mod.rs  parser.rs
rogato/: Cargo.toml
rogato/src/: main.rs  repl.rs
src/: main.rs
src/common/: Cargo.toml
src/common/src/: lib.rs  native_fn.rs  val.rs
src/common/src/ast/: expression.rs  fn_call.rs  fn_def.rs  helpers.rs  lambda.rs  let_expression.rs  literal.rs  mod.rs  module_def.rs  program.rs  query.rs  type_expression.rs  visitor.rs  walker.rs
src/common/src/db/: mod.rs  query.rs
src/common/src/eval/: environment.rs  eval_context.rs  mod.rs  module.rs  native_fn.rs
src/common/src/tests/db/: object_storage.rs
src/db/: Cargo.toml
src/db/src/: lib.rs
src/db/src/db/: mod.rs  object_storage.rs
src/fmodl/: grammar.rs  mod.rs  parser.rs  parser_tests.rs  util.rs
src/fmodl/ast/: expression.rs  fn_call.rs  fn_def.rs  mod.rs  program.rs  type_expression.rs
src/fmodl/db/: mod.rs  val.rs
src/interpreter/: Cargo.toml
src/interpreter/src/: environment.rs  eval_context.rs  lib.rs  module.rs  native_fn.rs  query_planner.rs
src/interpreter/src/ast/: expression.rs  fn_call.rs  lambda.rs  let_expression.rs  mod.rs  program.rs
src/interpreter/src/eval/: environment.rs  eval_context.rs  mod.rs  module.rs
src/interpreter/src/eval/ast/: expression.rs  fn_call.rs  fn_def.rs  lambda.rs  let_expression.rs  literal.rs  mod.rs  module_def.rs  program.rs  query.rs  type_expression.rs
src/interpreter/src/lib_std/: math.rs
src/interpreter/src/tests/: interpreter.rs  mod.rs
src/interpreter/src/tests/db/: mod.rs
src/parser/: Cargo.toml
src/parser/src/: lib.rs  parser.rs
src/parser/src/tests/: parser.rs
src/rogato/: Cargo.toml  mod.rs  parser.rs  util.rs
src/rogato/ast/: expression.rs  fn_call.rs  fn_def.rs  helpers.rs  lambda.rs  let_expression.rs  literal.rs  mod.rs  module_def.rs  program.rs  query.rs  type_expression.rs  visitor.rs  walker.rs
src/rogato/db/: api.rs  mod.rs  object.rs  object_storage.rs  query.rs  val.rs
src/rogato/interpreter/: environment.rs  eval_context.rs  mod.rs  module.rs  native_fn.rs
src/rogato/src/: main.rs
src/tests/: Cargo.toml  mod.rs
src/tests/fmodl/: mod.rs  parser.rs
src/tests/rogato/: interpreter.rs  mod.rs  parser.rs
src/tests/rogato/db/: api.rs  mod.rs  object_storage.rs
src/tests/src/rogato/: interpreter.rs  mod.rs  parser.rs
src/tests/src/rogato/db/: object_storage.rs
stdlib/: list.roga  map.roga  result.roga
type-checker/: Cargo.toml
type-checker/src/: lib.rs
type-checker/src/tests/: builtin_types.rs  mod.rs
