[package]
name = "fmodl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

peg = "0.8.0"
indradb-lib = { version = "3.0.2", features = ["rocksdb-datastore"] }
serde_json = "1.0.81"
indent_write = "2.2.0"
uuid = { version = "~0.8.2", features = ["v1", "serde"] }
