[package]
name = "rogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

indent_write = "2.2.0"
indradb-lib = { version = "3.0.2", features = ["rocksdb-datastore"] }
peg = "0.8.0"
serde = "1.0.138"
serde_json = "1.0.82"
uuid = { version = "~0.8.2", features = ["v1", "serde"] }
