[package]
name = "rogato-common"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
indent_write = "2.2.0"
rpds = "0.12.0"
rust_decimal = "1.26"
serde_json = "1.0.82"
smol_str = { version="0.1.23", features = ["std", "serde"] }
thiserror = "1.0"
