[package]
name = "rogato-common"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
archery = { version = "*" }
indent_write = "*"
rpds = "*"
rust_decimal = "*"
serde_json = "*"
smol_str = { version="*", features = ["std", "serde"] }
thiserror = "*"
