[package]
name = "rogato-common"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
archery = { version = "1.2.0" }
flame = { version = "*", optional = true }
flamer = { version = "*", optional = true }
indent_write = "*"
rpds = "*"
rust_decimal = "*"
serde_json = "*"
smol_str = { version="*", features = ["std", "serde"] }
thiserror = "*"

[features]
flame_it = ["flame", "flamer"]
