[package]
name = "rogato-db"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
uuid = { version = "*", features = ["v1", "serde"] }
indradb-lib = { version = "*", features = ["rocksdb-datastore"] }
serde_json = "*"
