[package]
name = "rogato-parser"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
rogato-common = { path = "../common" }

peg = "*"
rust_decimal = "*"
rust_decimal_macros = "*"
smol_str = { version="*", features = ["std", "serde"] }

[features]
trace = ["peg/trace"]
