[package]
name = "rogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogato-common = { path = "../common" }
rogato-db = { path = "../db" }
rogato-interpreter = { path = "../interpreter" }
rogato-parser = { path = "../parser" }
rogato-type-checker = { path = "../type-checker" }

clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.13"
indent_write = "2.2.0"
regex = "1"
