[package]
name = "rogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogato-common = { path = "../common" }
rogato-db = { path = "../db" }
rogato-interpreter = { path = "../interpreter" }
rogato-parser = { path = "../parser" }
rogato-type-checker = { path = "../type-checker" }

anyhow = "1.0.13"
clap = { version = "3.2.8", features = ["derive"] }
dirs = "4.0.0"
indent_write = "2.2.0"
regex = "1"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
thiserror = "1.0"
