[package]
name = "rogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogato-common = { path = "../common" }
rogato-compiler = { path = "../compiler" }
rogato-db = { path = "../db" }
rogato-interpreter = { path = "../interpreter" }
rogato-parser = { path = "../parser" }
rogato-type-checker = { path = "../type-checker" }

anyhow = "*"
clap = { version = "*", features = ["derive"] }
dirs = "*"
flame = { version = "*", optional = true }
flamer = { version = "*", optional = true }
indent_write = "*"
regex = "*"
rustyline = "*"
rustyline-derive = "*"
thiserror = "*"

[features]
flame_it = ["flame", "flamer"]
