[package]
name = "rogato-common"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.13"
indent_write = "2.2.0"
indradb-lib = { version = "3.0.2", features = ["rocksdb-datastore"] }
regex = "1"
serde = "1.0.138"
serde_json = "1.0.82"
thiserror = "1.0"
uuid = { version = "~1.1.2", features = ["v1", "serde"] }
smol_str = { version="0.1.23", features = ["std", "serde"] }
