[package]
name = "rogato-db"
version = "0.1.0"
authors = ["Christopher Bertels <bakkdoor@flasht.de>"]
edition = "2021"
license = "BSD 3-Clause"
repository = "https://github.com/bakkdoor/rogato"

[dependencies]
uuid = { version = "~1.1.2", features = ["v1", "serde"] }
indradb-lib = { version = "3.0.2", features = ["rocksdb-datastore"] }
serde_json = "1.0.82"
