[package]
name = "rogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogato-common = { path = "../common" }
rogato-interpreter = { path = "../interpreter" }
rogato-parser = { path = "../parser" }
rogato-db = { path = "../db" }

clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.13"
indent_write = "2.2.0"
indradb-lib = { version = "3.0.2", features = ["rocksdb-datastore"] }
peg = "0.8.0"
regex = "1"
serde = "1.0.138"
serde_json = "1.0.82"
thiserror = "1.0"
uuid = { version = "~1.1.2", features = ["v1", "serde"] }
smol_str = { version="0.1.23", features = ["std", "serde"] }

[features]
trace = ["peg/trace"]
